# Proje2

./: .gitignore  README.md
FindingJoe/: CMakeLists.txt  GPIO_Controller.cpp  GPIO_Controller.h  StepMotor.cpp  StepMotor.h  main.cpp
Proje2/: Makefile  Proje2  Proje2.pro  framestreamerthread.cpp  framestreamerthread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  stickmanlocation.cpp  stickmanlocation.h  ui_mainwindow.h
